--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "node index.js mock",
     "dev": "nodemon index.js mock",
-    "dev:both": "concurrently \"nodemon index.js mock\" \"cd web-ui && yarn start\"",
+    "dev:both": "concurrently \"nodemon index.js mock\" \"cd web-ui && yarn dev\"",
     "build:ui": "cd web-ui && yarn build",
     "format": "prettier --write \"**/*.{js,json,css,html}\""
   }
