--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@ npm-debug.log*
 # Dependency directories
 node_modules/
 
-# Environment variables
-.env
-
 # Build outputs
 dist/
 public/web-ui-dist/
+# web-ui/stats.html
 
 # Miscellaneous
 .DS_Store
@@ -19,4 +17,3 @@ public/web-ui-dist/
 *.swo
 *.lock
 .idea/
-.vscode/
