--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "start": "node index.js mock",
     "dev": "nodemon index.js mock",
-    "dev:both": "concurrently \"nodemon index.js mock\" \"cd web-ui && yarn dev\"",
+    "dev:ui": "cd web-ui && yarn dev",
+    "dev:both": "concurrently \"nodemon index.js mock\" \"yarn dev:ui\"",
     "build:ui": "cd web-ui && yarn build",
     "format": "prettier --write \"**/*.{js,json,css,html}\""
   }
