--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cooker-mock",
-  "version": "0.1.2",
+  "version": "1.1.0",
   "description": "The best front-end local mocking tool ever!",
   "main": "index.js",
   "repository": "git@github.com:cooker-mock/cooker-mock.git",
@@ -9,6 +9,14 @@
   "bin": {
     "cooker": "index.js"
   },
+  "keywords": [
+    "mocking",
+    "frontend",
+    "local",
+    "tool",
+    "api",
+    "development"
+  ],
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
