--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ PORT = 8088
 
 WEB_UI_PORT = 9088
 
-USER_PROJECT_PATH = /Users/boyuan/hot/cooker-example
+# Just a placeholder, it will be set by dev script in package.json
+USER_PROJECT_PATH
 
 WEB_UI_DIST_RELATIVE_PATH = public/web-ui-dist
