--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "standard-version": "^9.5.0"
   },
   "scripts": {
-    "start": "node index.js mock",
-    "dev": "nodemon index.js mock",
+    "start": "node index.js",
+    "dev": "cross-env USER_PROJECT_PATH=../cooker-example nodemon index.js",
     "dev:ui": "cd web-ui && yarn dev",
-    "dev:both": "concurrently \"nodemon index.js mock\" \"yarn dev:ui\"",
+    "dev:both": "concurrently \"yarn dev\" \"yarn dev:ui\"",
     "build:ui": "cd web-ui && yarn build",
     "format": "prettier --write \"**/*.{js,json,css,html}\""
   }
