fix: build asset for web-ui

--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
     "dev:ui": "cd web-ui && yarn dev",
     "dev:both": "concurrently \"yarn dev\" \"yarn dev:ui\"",
     "build:ui": "cd web-ui && yarn build",
-    "format": "prettier --write \"**/*.{js,json,css,html}\""
+    "format": "prettier --write \"**/*.{js,json,css,html}\"",
+    "postinstall": "cd web-ui && yarn install",
+    "prepublishOnly": "yarn build:ui",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch",
+    "release:major": "standard-version --release-as major"
   }
 }
