--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "uuidv4": "^6.2.13"
   },
@@ -33,7 +32,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "cross-env USER_PROJECT_PATH=../cooker-example nodemon index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "dev:ui": "cd web-ui && yarn dev",
     "dev:both": "concurrently \"yarn dev\" \"yarn dev:ui\"",
     "build:ui": "cd web-ui && yarn build",
