--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "vitepress": "^1.6.3"
   },
   "scripts": {
     "start": "node index.js",
@@ -41,6 +42,9 @@
     "prepublishOnly": "yarn build:ui",
     "release:minor": "standard-version --release-as minor",
     "release:patch": "standard-version --release-as patch",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   }
 }
