--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
+    "@monaco-editor/react": "^4.7.0",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "react": "^18.3.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "less": "^4.2.2",
     "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^6.0.5"
   }
