--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "openai": "^4.87.3",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
