--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   ],
   "dependencies": {
     "body-parser": "^1.20.3",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "openai": "^4.87.3",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
